--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,12 +72,17 @@ swiftmailer:
     spool: { type: memory }
 
 fos_rest:
+    format_listener:
+        rules:
+            - { path: '^/', priorities: ['json'], fallback_format: 'json' }
     body_converter:
         enabled: true
     view:
         formats: { json: true, xml: false, rss: false }
+        view_response_listener: true
     serializer:
         serialize_null: true
 
 sensio_framework_extra:
-    view: { annotations: false }
+    view: { annotations: true }
+    request: { converters: true }
